--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
 <body>
   <h1>Hello,world</h1>
+  <div>
+    I will add a image here!!
+  </div>
   <p>this is my world, I eat,sleep,have fun with git</p>
   <p>this is a new line!!!</p>
 </body>
