--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <h1>Hello,world</h1>
   <p>this is my world, I eat,sleep,have fun with git</p>
   <p>this is a new line!!!</p>
+  <P>fix a small error..</P>
 </body>
 
 </html>
