add a second new image

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
   </div>
   <p>this is my world, I eat,sleep,have fun with git</p>
   <p>this is a new line!!!</p>
+  <div>
+    I add second image here. There are two images now!
+  </div>
 </body>
 
 </html>
