Add a new line in index.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <p>this is my world, I eat,sleep,have fun with git</p>
   <p>this is a new line!!!</p>
   <P>fix a small error..</P>
+  <p>Right now, I add a new line locally, and this work remotely to github.</p>
 </body>
 
 </html>
