--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <p>this is a new line!!!</p>
   <P>fix a small error..</P>
   <p>Right now, I add a new line locally, and this work remotely to github.</p>
+  <p>create a new branch named html-skeleton from github master branch</p>
 </body>
 
 </html>
